--- a/content/index.html
+++ b/content/index.html
@@ -16,7 +16,9 @@
     <li>&hellip; in the present working directory.</li>
 </ol>
 
-<p>The latter allows you include any file using absolute paths. For example, the hostname of the device that generated this page was <b>{{##/etc/hostname##}}</b>.</p>
+<p>The latter allows you include any file using absolute paths.</p>
+
+<p>You can also run commands with <tt>{{&#34;&#33;command&#33;&#33;}}</tt>. However, this feature is quite limited: For reasons of simplicity and safety, <tt>cyc</tt> only allows a single command without any arguments. This means that you might have to write your own shell script to accomplish more complex tasks. The name of the calling page in <tt>content/</tt> is supplied via the environment variable <tt>CYC_FILE</tt>. For example, the reversed title of this page is <b>{{^^bin/reverse_title.sh^^}}</b>. This is accomplished by the script <tt>bin/reverse_title.sh</tt>, which you should check out.</p>
 
 <p>In this example setup, the "Last updated" field (normally stored in <tt>file.html.mtime</tt>) can be overriden by writing to <tt>file.html.utime</tt>. See the current page for an example ({{!!mtime!!}}). <tt>pre.sh</tt> will then use <tt>file.html.utime</tt>. Of course, it is not at all mandatory to use the "Last updated" field. Feel free to just remove <tt>{{&#33;&#33;mtime&#33;&#33;}}</tt> from your templates. Fields like <tt>mtime</tt> are replaced with the content of <tt>file.html.fieldname</tt>, which can be in <tt>meta/</tt> or <tt>content/</tt>. It is recommended to put the field data into <tt>meta/</tt> to prevent cluttering <tt>content/</tt>.</p>
 
